k8s/ingress_frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: major-frontend-ingress
  namespace: major-project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: image-restoration.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: major-frontend-service  # Must match the service name
            port:
              number: 80
